--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/onchainkit": "0.13.0",
+    "@tanstack/react-query": "^5.29.2",
+    "graphql": "^14.7.0",
+    "graphql-request": "^6.1.0",
     "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
