--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@coinbase/onchainkit": "0.13.0",
+    "@ethereum-attestation-service/eas-sdk": "^2.1.2",
     "@tanstack/react-query": "^5.29.2",
     "graphql": "^14.7.0",
     "graphql-request": "^6.1.0",
