--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@coinbase/onchainkit": "0.13.0",
     "@ethereum-attestation-service/eas-sdk": "^2.1.2",
     "@tanstack/react-query": "^5.29.2",
+    "ethers": "^6.12.0",
     "graphql": "^14.7.0",
     "graphql-request": "^6.1.0",
     "next": "13.5.6",
